Update deps and jvm opts